--- a/src/Views/Home/index.css
+++ b/src/Views/Home/index.css
@@ -66,3 +66,9 @@
 .home .product .delete {
   width: 10%;
 }
+
+.home .new-product {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
