--- a/src/Views/NewProduct/index.css
+++ b/src/Views/NewProduct/index.css
@@ -19,6 +19,11 @@
   margin-bottom: 50px;
 }
 
+.form form .image .notice {
+  font-size: 12px;
+  color: red;
+}
+
 .form form .buttons {
   display: flex;
   justify-content: space-around;
