--- a/src/Views/Home/index.css
+++ b/src/Views/Home/index.css
@@ -72,3 +72,47 @@
   width: 100%;
   justify-content: center;
 }
+
+@media (max-width: 900px) {
+  .home {
+    width: 90%;
+  }
+
+  .home .products-headers > div {
+    width: 15% !important;
+    font-size: 12px;
+  }
+
+  .home .products-headers .product-name {
+    width: 40% !important;
+    text-align: center;
+  }
+
+  .home .product {
+    font-size: 12px;
+    justify-content: space-between;
+  }
+
+  .home .product > div {
+    width: 15% !important;
+  }
+
+  .home .product .product-name {
+    width: 40% !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .home .product .product-name img {
+    width: 60%;
+  }
+
+  .home .product .product-name .name {
+    margin: 1em 0 0 0;
+  }
+
+  .home .product .delete {
+    width: 15%;
+  }
+}
